se puso la extencion .JPG a .jpg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        </div>
        
       <div class="center">
-      <img src="arnold.JPG" style="width:150px; height:150px; border-radius:100%;border: solid 5px darkviolet;"/>
+      <img src="arnold.jpg" style="width:150px; height:150px; border-radius:100%;border: solid 5px darkviolet;"/>
         </div>
         <p style="display:flex;justify-content: center; align-items: center;color:black;font-size:20px;font-weight:bold">Hola, soy Arnold c:</p>
        
